Added PWA support

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
         <meta property="twitter:image" content="https://qrgen.cc/static/banner.png">
 
         <link rel="icon" type="image/png" href="/static/favicon.png">
-        <link rel="manifest" href="/static/manifest.json">
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <noscript>
