--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,16 +21,20 @@
         <meta property="twitter:url" content="https://qrgen.cc">
         <meta property="twitter:title" content="QrGen.cc">
         <meta property="twitter:description" content="QrGen.cc is a free service that lets you create QR-Codes and shortened URLs from any link quickly and easily">
+        <meta property="twitter:site" content="@betahuhn">
         <meta property="twitter:image" content="https://qrgen.cc/static/banner.png">
 
-        <link rel="icon" type="image/png" href="/static/favicon.png">
-        <link rel="manifest" href="/manifest.json">
+         <!-- Manifest and favicon -->
+         <link rel="icon" type="image/png" href="/static/favicon.png">
+         <link rel="manifest" href="/manifest.json">
+ 
+         <!-- Ackee script -->
+         <script async src="https://stats.mxis.ch/statistik.js" data-ackee-server="https://stats.mxis.ch" data-ackee-domain-id="2c3c3d38-005d-4874-aed2-4f518ea15609"></script>
     </head>
     <body>
         <noscript>
             <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
-        <script async src="https://stats.mxis.ch/statistik.js" data-ackee-server="https://stats.mxis.ch" data-ackee-domain-id="2c3c3d38-005d-4874-aed2-4f518ea15609"></script>
     </body>
 </html>
