♻️ Combine frontend and backend

--- a/src/ui/public/index.html
+++ b/src/ui/public/index.html
@@ -25,8 +25,8 @@
         <meta property="twitter:image" content="https://qrgen.cc/static/banner.png">
 
          <!-- Manifest and favicon -->
-         <link rel="icon" type="image/png" href="/static/favicon.png">
-         <link rel="manifest" href="/manifest.json">
+         <link rel="icon" type="image/png" href="./static/favicon.png">
+         <link rel="manifest" href="./manifest.json">
  
          <!-- Ackee script -->
          <script async src="https://stats.mxis.ch/statistik.js" data-ackee-server="https://stats.mxis.ch" data-ackee-domain-id="2c3c3d38-005d-4874-aed2-4f518ea15609"></script>
